--- a/KP.html
+++ b/KP.html
@@ -23,7 +23,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('FP.jpg'); /* Ganti dengan nama file fotomu */
+      background-image: url('FP.png'); /* Ganti dengan nama file fotomu */
       background-size: cover;
       background-position: center;
       z-index: -2;
