--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="story-image" style="background-image: url('gambar-kamu2.jpg');"></div>
         <div class="story-text">
           <div class="story-title">Cesyandika</div>
-          <div class="story-epilog">Senyuman Itu Indah. Jika Bagimu Tidak, Mungkin Karena Kamu Belum Melihatnya.</div>
+          <div class="story-epilog">Senyumannya Masih Sama, Dan Diriku Juga Masih Menyukainya.</div>
         </div>
       </a>
 
