--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       </a>
 
       <!-- Panel 2 -->
-      <a class="story-panel panel-cesyandika" href="https://link-cerita-2.com">
-        <div class="story-image" style="background-image: url('gambar-kamu2.jpg');"></div>
+      <a class="story-panel panel-cesyandika" href="comingsoon-CS.html">
+        <div class="story-image" style="background-image: url('CS.png');"></div>
         <div class="story-text">
           <div class="story-title">Cesyandika</div>
           <div class="story-epilog">Senyumannya Masih Sama, Dan Diriku Juga Masih Menyukainya.</div>
