--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="story-image" style="background-image: url('GS.png');"></div>
         <div class="story-text">
           <div class="story-title">Future Destiny</div>
-          <div class="story-epilog">Kalau Cinta Itu Bisa Bicara, Aku Udah Ngomong Sama Kamu Dari Dulu.</div>
+          <div class="story-epilog">"Kalau Cinta Itu Bisa Bicara, Aku Udah Ngomong Sama Kamu Dari Dulu."</div>
         </div>
       </a>
 
@@ -186,7 +186,7 @@
         <div class="story-image" style="background-image: url('CS.png');"></div>
         <div class="story-text">
           <div class="story-title">Cesyandika</div>
-          <div class="story-epilog">Senyumannya Masih Sama, Dan Diriku Juga Masih Menyukainya.</div>
+          <div class="story-epilog">"Senyumannya Masih Sama, Dan Diriku Juga Masih Menyukainya."</div>
         </div>
       </a>
 
