--- a/final-chapter.html
+++ b/final-chapter.html
@@ -15,14 +15,12 @@
       margin-left: auto;
       margin-right: auto;
     }
-
     h1 {
       text-align: center;
       font-size: 2.5em;
       margin-bottom: 10px;
       user-select: none;
     }
-
     .panel, .music-panel {
       background-color: white;
       border: 2px solid black;
@@ -32,30 +30,18 @@
       width: 100%;
       box-sizing: border-box;
     }
-
     .panel img {
       width: 100%;
       height: auto;
       display: block;
       margin-top: 10px;
     }
-
     .caption, .music-text-top {
       font-size: 1.5em;
       margin-top: 10px;
       user-select: none;
       text-align: center;
     }
-
-    .sound-effect {
-      font-weight: bold;
-      font-size: 1.3em;
-      color: #555;
-      font-style: italic;
-      margin-top: 5px;
-      user-select: none;
-    }
-
     .music-controls {
       margin-top: 6px;
       display: flex;
@@ -63,7 +49,6 @@
       gap: 10px;
       user-select: none;
     }
-
     .music-controls button {
       background-color: transparent;
       border: none;
@@ -74,21 +59,17 @@
       color: black;
       transition: transform 0.15s ease;
     }
-
     .music-controls button.play-button {
       font-size: 28px;
     }
-
     .music-controls button:hover {
       transform: scale(1.2);
       color: #555;
     }
-
     .nav-container {
       text-align: center;
       margin: 50px 0;
     }
-
     .main-nav-btn {
       background-color: black;
       color: white;
@@ -99,7 +80,6 @@
       font-family: 'Amatic SC', cursive;
       cursor: pointer;
     }
-
     #navPopup {
       display: none;
       position: fixed;
@@ -110,7 +90,6 @@
       align-items: center;
       justify-content: center;
     }
-
     .popup-content {
       background: white;
       padding: 30px;
@@ -121,13 +100,11 @@
       box-shadow: 4px 4px black;
       font-family: 'Amatic SC', cursive;
     }
-
     .popup-buttons {
       display: flex;
       justify-content: space-between;
       margin-top: 20px;
     }
-
     .popup-buttons a {
       text-decoration: none;
       background-color: black;
@@ -136,18 +113,14 @@
       border-radius: 5px;
       font-family: 'Amatic SC', cursive;
     }
-
     #navPopup.active {
       display: flex;
     }
-
-    /* Fade-in untuk paragraf tersembunyi */
     #hiddenSecret {
       opacity: 0;
       display: none;
       transition: opacity 0.6s ease;
     }
-
     #hiddenSecret.show {
       display: block;
       opacity: 1;
@@ -187,7 +160,7 @@
   </div>
 
   <div class="panel">
-    <div class="caption">Dia bilang mau masuk pesantren. Di Kediri. Aku cuma bisa bilang “oh”. Padahal aku pengen bilang “jangan jauh-jauh”, tapi itu gak sopan. Dan gak penting juga. Lagian itu hidup dia, bukan hidupku.</div>
+    <div class="caption">Dia bilang mau pesantren ke salah satu kota di pulau jawa. Aku cuma bisa bilang “oh”. Padahal aku pengen bilang “jangan jauh-jauh”, tapi itu gak sopan. Dan gak penting juga. Lagian itu hidup dia, bukan hidupku.</div>
     <img src="C6P4.png" alt="Siswa Diam" />
   </div>
 
@@ -210,12 +183,10 @@
       <p style="font-size: 1.5em;">Yakin Mau Selesai Gitu Aja?</p>
       <p style="font-size: 1.5em;">Selesai sekarang tuh, kayak bangun pas mimpi lagi seru-serunya. Sayang banget kan?</p>
 
-      <!-- Tombol untuk membuka paragraf tersembunyi -->
       <button id="revealSecretBtn" style="font-size: 1.2em; margin-top: 10px; font-family: 'Amatic SC', cursive; background: none; border: none; cursor: pointer; color: #555; text-decoration: underline;">
         (ada pesan nih!, klik aja)
       </button>
 
-      <!-- Paragraf tersembunyi -->
       <p id="hiddenSecret" style="font-size: 1.5em;">
         Chapter ini buat kamu. Tapi kamu gak bakal tau. Dan aku juga gak bakal bilang. Biar aja gitu. Kayak rahasia yang manis tapi gak usah dikasih tahu.
       </p>
@@ -237,10 +208,8 @@
     function togglePlay() {
       if (audio.paused) {
         audio.play();
-        playBtn.textContent = '❚❚';
       } else {
         audio.pause();
-        playBtn.textContent = '▶';
       }
     }
 
@@ -260,8 +229,25 @@
       }
     }
 
+    audio.addEventListener('play', () => {
+      playBtn.textContent = '❚❚';
+    });
+    audio.addEventListener('pause', () => {
+      playBtn.textContent = '▶';
+    });
     audio.addEventListener('ended', () => {
       playBtn.textContent = '▶';
+    });
+
+    window.addEventListener('DOMContentLoaded', () => {
+      const promise = audio.play();
+      if (promise !== undefined) {
+        promise.then(() => {
+          playBtn.textContent = '❚❚';
+        }).catch(() => {
+          playBtn.textContent = '▶';
+        });
+      }
     });
 
     mainNavBtn.addEventListener('click', () => {
@@ -274,7 +260,6 @@
       }
     });
 
-    // Reveal paragraf tersembunyi
     const revealBtn = document.getElementById('revealSecretBtn');
     const hiddenSecret = document.getElementById('hiddenSecret');
 
