--- a/comingsoon-CS.html
+++ b/comingsoon-CS.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coming Soon | FUTURE DESTINY</title>
+  <title>Coming Soon | CESYANDIKA</title>
 
-  <!-- Font Jepang Elegan -->
-  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@600&family=Kosugi+Maru&family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+  <!-- Font Jepang Elegan & Romantis -->
+  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@600&family=Kosugi+Maru&family=M+PLUS+Rounded+1c&family=Satisfy&family=Handlee&display=swap" rel="stylesheet">
 
   <style>
     * {
@@ -50,9 +50,8 @@
     }
 
     h1.title {
-      font-family: 'Shippori Mincho B1', serif;
-      font-weight: 600;
-      font-size: 11vw;
+      font-family: 'Satisfy', cursive;
+      font-size: 15vw;
       background: linear-gradient(90deg, #c75b5b, #ffffff);
       background-clip: text;
       -webkit-background-clip: text;
@@ -62,9 +61,8 @@
     }
 
     p.subtitle {
-      font-family: 'Kosugi Maru', sans-serif;
-      font-size: 1.2rem;
-      font-style: italic;
+      font-family: 'Handlee', cursive;
+      font-size: 1.5rem;
       color: #ffffff;
       max-width: 700px;
       margin-bottom: 2rem;
@@ -85,15 +83,15 @@
     }
 
     p.credit {
-      font-family: 'M PLUS Rounded 1c', sans-serif;
+      font-family: 'Handlee', cursive;
       position: fixed;
       bottom: 10px;
       width: 100%;
       font-size: 0.9rem;
       text-align: center;
-      opacity: 0.7;
+      opacity: 0.8;
       z-index: 2;
-      color: #ccc;
+      color: #ffffff;
     }
   </style>
 </head>
@@ -102,7 +100,7 @@
 
   <div class="content">
     <h1 class="title">CESYANDIKA</h1>
-    <p class="subtitle">“Senyumannya Masih Sama,Dan Diriku Juga Masih Menyukainya.”</p>
+    <p class="subtitle">“Senyuman Itu Masih Sama, Dan Diriku Juga Masih Menyukainya.”</p>
     <p class="coming">COMING SOON</p>
   </div>
 
