--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cerita Ceko</title>
 
   <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Pacifico&family=Roboto:wght@400;700&family=Satisfy&family=Handlee&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -110,14 +110,15 @@
     }
 
     .story-title {
+      font-family: 'Satisfy', cursive;
       font-size: 24px;
-      font-weight: bold;
       margin-bottom: 6px;
     }
 
     .story-epilog {
+      font-family: 'Handlee', cursive;
       font-size: 14px;
-      line-height: 1.4;
+      line-height: 1.2;
     }
 
     /* Panel 1: Future Destiny */
@@ -133,12 +134,12 @@
       color: #fff;
     }
 
-    /* Panel 2: Cesyandika (Hijau seperti gambar) */
+    /* Panel 2: Cesyandika */
     .panel-cesyandika {
       background-color: #c75b5b;
       font-family: 'Patrick Hand', cursive;
       color: #fff;
-      border-color: ##943d3d;
+      border-color: #943d3d;
     }
 
     .panel-cesyandika .story-title,
@@ -186,7 +187,7 @@
         <div class="story-image" style="background-image: url('CS.png');"></div>
         <div class="story-text">
           <div class="story-title">Cesyandika</div>
-          <div class="story-epilog">"Senyumannya Masih Sama, Dan Diriku Juga Masih Menyukainya."</div>
+          <div class="story-epilog">"Senyuman Itu Masih Sama, Dan Diriku Juga Masih Menyukainya."</div>
         </div>
       </a>
 
