--- a/bonus-chapter.html
+++ b/bonus-chapter.html
@@ -153,7 +153,7 @@
   </div>
 
   <div class="panel">
-    <div class="caption">Dimanapun kamu berada nanti, percayalah... Aku bakal nyari kamu.</div>
+    <div class="caption">Jika kita punya kesempatan untuk bertemu kembali, aku harap saat itu kita telah menjadi manusia yang dewasa dan bisa saling memahami.</div>
     <img src="C7P7.png" alt="Harapan" />
   </div>
 
